# computeruseprotocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO_WINDOWS_NORMALIZATION.md  agent.py  bench_a11y_tree_fast.py  cup-mcp-run  cup_format.py  doc.md  macos_tree.py  pyproject.toml  windows-mcp-run
.claude/: settings.local.json
.github/workflows/: ci.yml
cup/: __init__.py  __main__.py  _base.py  _router.py  format.py  search.py
cup/actions/: _handler.py  _linux.py  _macos.py  _web.py  _windows.py  executor.py
cup/mcp/: server.py
docs/: api-reference.md
schema/: compact.md  cup.schema.json  example.json  mappings.json
tests/: test_actions.py  test_batch.py  test_find.py  test_format.py  test_router.py  test_schema.py  test_screenshot.py  test_web_actions.py
